# Marichi

./: .gitignore  HOW_TO_RUN.md  Makefile  README.md  app.py  bootstrap_receiver.py  install.sh  pyproject.toml  receive.py  receiver.html  requirements.txt  send.py  validate.py
marichi/: __init__.py  ack.py  config.py  frame_codec.py  receiver.py  sender.py  validator.py
marichi/transport/: __init__.py  audio_modem.py  qr_stream.py
static/: manifest.json  sw.js
templates/: index.html
